picks title and styles

--- a/app/assets/stylesheets/base/color.scss
+++ b/app/assets/stylesheets/base/color.scss
@@ -4,11 +4,12 @@ $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 $best-red: #A71D31;
+$green: #4B7F52;
 
 .red {
   color: #A71D31;
 }
 
 .green {
-  color: green;
+  color: #4B7F52;
 }
