--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
 
     .week-switcher {
       position: relative;
@@ -72,11 +73,22 @@
       background: $drk-primary;
       transition: .3s;
       color: white;
+      i {
+        margin-right: 10px;
+      }
     }
     button:hover {
       color: $lt-primary;
       background: white;
       border: 1px black solid;
+    }
+    .picks-dropdown {
+      z-index: 100;
+      position: absolute;
+      bottom: -110px;
+      right: 0px;
+      display: flex;
+      flex-direction: column;
     }
   }
   .picks-labels {
