add loader next to create pool while waiting

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -51,3 +51,11 @@
   background: rgba(0, 0, 0, 0.5);
   z-index: 10;
 }
+
+.submit-row {
+  width: 100%;
+  padding-left: 5px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
