--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,6 +1,7 @@
 $off-white: #e9ebee;
 
 .standings-box {
+  width: 415px;
   padding-top: 20px;
   position: relative;
 
@@ -20,12 +21,13 @@ $off-white: #e9ebee;
 
   .standings-box-top-item {
   display: flex;
+  justify-content: space-between;
   margin-top: 10px;
   padding: 5px;
   font-weight: bold;
 
     .title, .pool {
-      width: 125px;
+      width: 150px;
     }
 
     .score, .losses {
@@ -43,6 +45,7 @@ $off-white: #e9ebee;
 
   .standings-box-item {
   display: flex;
+  justify-content: space-between;
   border-top: .2px rgba(51, 51, 51,.2) solid;
   padding: 5px;
 
@@ -55,7 +58,7 @@ $off-white: #e9ebee;
     }
 
     .title {
-      width: 125px;
+      width: 150px;
     }
 
     .score, .losses {
@@ -64,7 +67,7 @@ $off-white: #e9ebee;
     }
 
     .pool {
-      width: 125px;
+      width: 150px;
       border-left: none;
     }
 
