--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -8,19 +8,17 @@
   color: white;
   overflow-y: hidden;
 
-  h2 {
+  .bulletin-header {
+    width: 870px;
+    padding-right: 10px;
     position: absolute;
     top: 0px;
+    display: flex;
+    justify-content: space-between;
     font-size: 20px;
-    text-align: left;
     opacity: .5;
     font-weight: bold;
   }
-
-  // .bulletin-container-container {
-  //   padding: 5px;
-  //   overflow-y: hidden;
-  // }
 
   .bulletin-container {
     width: 100%;
