--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -37,7 +37,8 @@
   align-items: center;
   overflow-y: overlay;
   font-family: 'Open Sans', sans-serif;
-  background: white;
+  // background: white;
+  background: #E9EBEE;
 }
 
 .hidden {
