--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -8,7 +8,7 @@
   height: 100%;
   width: 100%;
   min-width: 900px;
-  background: white;
+  // background: white;
   display: flex;
   flex-direction: column;
   align-items: center;
