--- a/app/assets/stylesheets/components/common/button.scss
+++ b/app/assets/stylesheets/components/common/button.scss
@@ -8,7 +8,7 @@
   background: white;
   transition: .2s;
   // color: white;
-  color: $drk-primary;
+  color: black;
   cursor: pointer;
   border: 1px $drk-primary solid;
 
