--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -4,7 +4,7 @@
   padding: 0px 5px;
   padding-top: 30px;
   position: relative;
-  background: $lt-primary;
+  background: $drk-primary;
   color: white;
   overflow-y: hidden;
 
@@ -13,7 +13,7 @@
     top: 0px;
     font-size: 20px;
     text-align: left;
-    opacity: .5;
+    // opacity: .5;
     font-weight: bold;
   }
 
