--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -22,11 +22,11 @@
       opacity: .5;
     }
 
-    .pool-list-top-buttons {
-      width: 220px;
-      display: flex;
-      justify-content: space-between;
-      margin-top: 5px;
+    // .pool-list-top-buttons {
+    //   width: 220px;
+    //   display: flex;
+    //   justify-content: space-between;
+    //   margin-top: 5px;
 
       button {
         height: 30px;
@@ -37,7 +37,7 @@
           padding-right: 10px;
         }     
       }
-    }
+    // }
   }
 
   .pool-list-alert {
