--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -30,7 +30,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $lt-primary;
+  background: $drk-primary;
 }
 
 .home-bottom {
