--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -10,8 +10,10 @@ $transition-time: 0.1s;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
-  background: white;
+  // color: black;
+  // background: white;
+  color: white;
+  background: $drk-primary;
   box-shadow: inset 0px 4px 8px -3px rgba(17, 17, 17, .06);
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   z-index: 100;
