--- a/app/assets/stylesheets/components/navbar/hamburger.scss
+++ b/app/assets/stylesheets/components/navbar/hamburger.scss
@@ -22,7 +22,8 @@ $drk-text: #CDCDCD;
     position: absolute;
     height: 4px;
     width: 100%;
-    background: #111;
+    // background: #111;
+    background: white;
     border-radius: 4px;
     opacity: 1;
     left: 0;
