--- a/app/assets/stylesheets/base/color.scss
+++ b/app/assets/stylesheets/base/color.scss
@@ -1,5 +1,6 @@
 // $drk-primary: #1c1c1c;
-$drk-primary: #004B91;
+// $drk-primary: #004B91;
+$drk-primary: #3B5998;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
