--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -4,7 +4,7 @@
   padding: 0px 5px;
   padding-top: 40px;
   position: relative;
-  background: $lt-primary;
+  background: $drk-primary;
   color: white;
   overflow-y: hidden;
 
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 20px;
-    opacity: .5;
+    // opacity: .5;
     font-weight: bold;
   }
 
