--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -72,7 +72,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $lt-primary;
+  background: $drk-primary;
 }
 
 .pool-coms {
