--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -106,13 +106,13 @@
       line-height: 12px;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: $lt-primary;
+      background: $drk-primary;
       transition: .2s;
       color: white;
     }
 
     .chat-form-button:hover {
-      color: $lt-primary;
+      color: $drk-primary;
       border: 1px black solid;
       background: white;
     }
