picks and metrics color fix

--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -24,8 +24,8 @@
     padding-top: 20px;
     display: flex;
     flex-direction: column;
-    background: white;
-
+    // background: white;
+    background: #E9EBEE;
   }
 
   .picks-header {
@@ -70,7 +70,8 @@
       align-items: center;
       border-radius: 2px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-      background: $drk-primary;
+      // background: $drk-primary;
+      background: $lt-primary;
       transition: .3s;
       color: white;
       i {
