--- a/app/assets/stylesheets/components/metrics/_.scss
+++ b/app/assets/stylesheets/components/metrics/_.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     .blocker {
-      background: white;
+      background: #E9EBEE;
       overflow: hidden;
       height: 20px;
       min-width: 870px;
