splash mid color

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -44,7 +44,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: $lt-primary;
+  background: $drk-primary;
 
   h1 {
     font-size: 30px;
