--- a/app/assets/stylesheets/components/moderator/_.scss
+++ b/app/assets/stylesheets/components/moderator/_.scss
@@ -93,6 +93,47 @@
     }
   }
 
+  .moderator-buy-form {
+    width: 780px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .buy-form {
+      width: 780px;
+    }
+    .poolform-group {
+      margin-bottom: 0px;
+    }
+    .buy-form-button-row {
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px 5px;
+      padding-bottom: 20px;
+      input {
+        margin-left: 10px;
+      }
+      .buy-form-button {
+        width: 90px;
+        height: 30px;
+        font-size: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 3px;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        transition: .2s;
+        background: $drk-primary;
+        color: white;
+      }
+      .buy-form-button:hover {
+        color: $drk-primary;
+        border: 1px $drk-primary solid;
+        background: white;
+      }
+    }
+  }
+
   .pool-roster {
     width: 780px;
     font-size: 15px;
