--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -106,15 +106,21 @@
       line-height: 12px;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: $drk-primary;
+      // background: $drk-primary;
+      background: white;
       transition: .2s;
-      color: white;
+      // color: white;
+      color: $drk-primary;
+      border: 1px $drk-primary solid;
     }
 
     .chat-form-button:hover {
-      color: $drk-primary;
-      border: 1px black solid;
-      background: white;
+      // color: $drk-primary;
+      // border: 1px black solid;
+      // background: white;
+      background: $drk-primary;
+      color: white;
+
     }
   }
   
