--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -14,7 +14,7 @@
 }
 
 .base-container {
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   display: flex;
@@ -27,6 +27,7 @@
 .app-container {
   position: relative;
   width: 100%;
+  height: 100%;
   // min-width: 900px;
   min-width: 1360px;
   min-height: 950px;
