--- a/app/assets/stylesheets/base/color.scss
+++ b/app/assets/stylesheets/base/color.scss
@@ -1,12 +1,16 @@
 // $drk-primary: #1c1c1c;
 // $drk-primary: #004B91;
-$drk-primary: #3B5998;
+// $drk-primary: #3B5998;
+// $drk-primary: #05668D;
+$drk-primary: #1D3461;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 $best-red: #A71D31;
 $green: #4B7F52;
+$sea-blue: #05668D;
+$sea-green: #7FB285;
 
 .red {
   color: #A71D31;
