--- a/app/assets/stylesheets/components/leaderboard/_.scss
+++ b/app/assets/stylesheets/components/leaderboard/_.scss
@@ -1,5 +1,7 @@
 .leaderboard-container {
   min-height: 1080px;
+  min-width: 870px;
+  width: 95%;
   padding: 20px 0px;
   display: flex;
   flex-direction: column;
@@ -9,6 +11,7 @@
   .leaderboard-labels {
     margin-bottom: 5px;
     display: flex;
+    justify-content: space-between;
     padding: 5px 0px;
     border-radius: 2px;
     font-size: 20px;
@@ -19,12 +22,10 @@
       width: 50px;
       text-align: center;
     }
-
     .title {
-      width: 100px;
+      width: 125px;
       text-align: center;
     }
-
     .points{
       width: 100px;
     }
@@ -37,6 +38,7 @@
     .leaderboard-item {
       height: 30px;
       display: flex;
+      justify-content: space-between;
       border-bottom: .2px rgba(51, 51, 51,.2) solid;
       div {
         width: 50px;
@@ -45,8 +47,9 @@
         align-items: center;
       }
       .title {
-        width: 100px;
+        width: 125px;
         text-align: center;
+        font-weight: bold;
       }
       .total {
         width: 100px;
