--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     flex: 0 0 auto;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    background: $lt-primary;
+    background: $drk-primary;
     color: white;
 
     div[class^='logo-'] {
