bolded chat author text

--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -36,7 +36,7 @@
         line-height: 18px;
 
         .chat-author {
-          font-weight: 500;
+          font-weight: bold;
           margin-right: 8px;
         }
 
