added profile box to dash

--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -3,6 +3,7 @@
 @import "join_pool_form";
 @import "confirm_form";
 @import "mod_board";
+@import "profile_box";
 
 .home-container {
   height: 100%;
