--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -1,5 +1,5 @@
 .pool-list {
-  width: 870px;
+  width: 435px;
   height: 225px;
   position: relative;
   // padding-bottom: 5px;
@@ -43,6 +43,7 @@
 
   .pool-list-bottom {
     height: 210px;
+    padding-left: 5px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -67,22 +68,19 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-
       i {
         padding-right: 5px;
       }
     }
-
-      button {
-        height: 30px;
-        width: 140px;
-        font-size: 12px;
-        line-height: 12px;
-        margin: 7.5px 5px;  
-          i {
-            padding-right: 10px;
-          }     
-        }
-    
+    button {
+      height: 30px;
+      width: 140px;
+      font-size: 12px;
+      line-height: 12px;
+      margin: 7.5px 5px;  
+        i {
+          padding-right: 10px;
+        }     
+      }
   }
 }
