--- a/app/assets/stylesheets/components/home/profile_box.scss
+++ b/app/assets/stylesheets/components/home/profile_box.scss
@@ -44,6 +44,13 @@
       width: 140px;
       font-size: 12px;
       line-height: 12px;
+      background: $drk-primary;
+      color: white;     
+        &:hover {
+          background: white;
+          color: black;
+          border: 1px $drk-primary solid;
+        }
         i {
           padding-right: 10px;
         }     
