--- a/app/assets/stylesheets/components/leaderboard/_.scss
+++ b/app/assets/stylesheets/components/leaderboard/_.scss
@@ -89,47 +89,50 @@
     color: white;
     .leaderboard-week {
       width: 125px;
-      text-align: center;
+      display: flex;
+      justify-content: center;
+      // text-align: center;
     }
     .leaderboard-name {
-      // width: 125px;
-      // text-align: center;
+      width: 550px;
       padding-left: 25px;
     }
     .leaderboard-score {
-      // width: 125px;
-      // text-align: center;
+      width: 125px;
       padding-right: 25px;
+      display: flex;
+      justify-content: center;
     }
   }
   .leaderboard-weekly-item {
     height: 30px;
+    // padding: 0px 25px;
     display: flex;
     justify-content: space-between;
     border-bottom: .2px rgba(51, 51, 51,.2) solid;
     position: relative;
     .week {
-      // position: absolute;
-      // left: 45%;
-      // width: 125px;
-      width: 33.33%;
+      // width: 230px;
+      width: 125px;
       display: flex;
       justify-content: center;
     }
     .weekly-winner {
+      width: 550px;
       display: flex;
       justify-content: flex-start;
-      width: 33.33%;
       padding-left: 25px;
       font-weight: bold;
+      div {
+        padding-right: 15px;
+      }
     }
     .weekly-points {
-      // position: absolute;
-      // right: 2%;
-      width: 33.33%;
-      padding-right: 45px;
+      // width: 230px;
+      width: 125px;
+      padding-right: 25px;
       display: flex;
-      justify-content: flex-end;
+      justify-content: center;
     }
   }
   .leaderboard-weekly-body {
