leaderboard highlights weekly winners

--- a/app/assets/stylesheets/components/leaderboard/_.scss
+++ b/app/assets/stylesheets/components/leaderboard/_.scss
@@ -70,6 +70,9 @@
       .total {
         width: 100px;
       }
+      .highlight {
+        background: rgba(255, 189, 0, .2);
+      }
     }
     div:last-child {
       border-bottom: none;
