--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -1,5 +1,5 @@
 .modboard-box {
-  height: 287px;
+  // height: 287px;
   width: 870px;
   padding: 0px 5px;
   padding-top: 30px;
@@ -13,22 +13,16 @@
     top: 0px;
     font-size: 20px;
     text-align: left;
-    // opacity: .5;
     font-weight: bold;
   }
 
-  // .modboard-container-container {
-  //   padding: 5px;
-  //   overflow-y: hidden;
-  // }
-
   .modboard-container {
     width: 100%;
-    height: 267px;
+    // height: 267px;
     padding: 10px 0px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    // justify-content: space-around;
     overflow-y: hidden;
 
     .welcome {
@@ -37,7 +31,7 @@
     }
 
     .modboard-item {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       padding-left: 5px;
       display: flex;
       flex-direction: column;
