--- a/app/assets/stylesheets/components/moderator/_.scss
+++ b/app/assets/stylesheets/components/moderator/_.scss
@@ -45,15 +45,10 @@
         background: white;
         border: 1px $drk-primary solid;
         color: $drk-primary;
-        // background: $drk-primary;
-        // color: white;
       }
       .bulletin-form-button:hover {
         color: white;
         background: $drk-primary;
-        // color: $drk-primary;
-        // border: 1px $drk-primary solid;
-        // background: white;
       }
     }
   }
@@ -87,16 +82,11 @@
         border-radius: 3px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: .2s;
-        // background: $drk-primary;
-        // color: white;
         background: white;
         border: 1px $drk-primary solid;
         color: $drk-primary;
       }
       .name-form-button:hover {
-        // color: $drk-primary;
-        // border: 1px $drk-primary solid;
-        // background: white;
         color: white;
         background: $drk-primary;
       }
@@ -133,16 +123,11 @@
         border-radius: 3px;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: .2s;
-        // background: $drk-primary;
-        // color: white;
         background: white;
         border: 1px $drk-primary solid;
         color: $drk-primary;
       }
       .buy-form-button:hover {
-        // color: $drk-primary;
-        // border: 1px $drk-primary solid;
-        // background: white;
         color: white;
         background: $drk-primary;
       }
@@ -152,6 +137,12 @@
   .pool-roster {
     width: 780px;
     font-size: 15px;
+    span {
+      padding: 0px 5px;
+    }
+    .member-name {
+      font-weight: bold;
+    }
     .roster-header {
       font-size: 20px;
       margin-right: auto;
