--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -14,6 +14,7 @@ $off-white: #e9ebee;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black !important;
   }
 
   .standings-box-title {
