--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -15,6 +15,18 @@
     justify-content: space-between;
     font-size: 20px;
     font-weight: bold;
+
+    .invite-button {
+      padding: 5px 10px;
+      background: white;
+      border: 1px white solid;
+      color: black;
+
+      &:hover {
+        background: $drk-primary;
+        color: white;
+      }
+    }
   }
 
   .bulletin-container {
