--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -1,3 +1,22 @@
+.modal-button-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  .modal-button {
+    padding: 5px 20px;
+    background: white;
+    border: 1px $drk-primary solid;
+    color: black;
+    border-radius: 2px;
+  
+    &:hover {
+      background: $drk-primary;
+      color: white;
+      border: white;
+    }
+  }
+}
+
 .bulletin-box {
   width: 870px;
   padding: 0px 5px;
@@ -12,21 +31,28 @@
     position: absolute;
     top: 0px;
     display: flex;
-    justify-content: space-between;
-    font-size: 20px;
+    justify-content: space-around;
+    font-size: 15px;
     font-weight: bold;
 
     .invite-button {
-      padding: 5px 10px;
+      padding: 5px 20px;
       background: white;
       border: 1px white solid;
       color: black;
-
+    
       &:hover {
         background: $drk-primary;
         color: white;
       }
     }
+
+    h2 {
+      font-weight: bold;
+    }
+
+  
+    
   }
 
   .bulletin-container {
@@ -49,7 +75,7 @@
       align-items: flex-start;
 
       .author {
-        font-size: 12.5px;
+        font-size: 15px;
         font-weight: bold;
         margin-bottom: 5px;
       }
