--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -17,6 +17,10 @@
   }
 }
 
+span {
+  font-weight: bold;
+}
+
 .bulletin-box {
   width: 870px;
   padding: 0px 5px;
@@ -57,6 +61,7 @@
 
   .bulletin-container {
     width: 100%;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
