--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -55,12 +55,12 @@ and (max-device-width : 1000px) {
   .home-container {
     max-width: 500px;
     min-width: 400px;
-    min-height: 500px;
+    min-height: 0px;
     justify-content: flex-start;
     .home-top {
       width: 100%;
-      height: 400px;
-      padding: none;
+      height: auto;
+      padding: 10px 0px;
       flex-direction: column;
       .pool-list {
         width: 100%;
@@ -75,7 +75,7 @@ and (max-device-width : 1000px) {
         width: 100%;
         padding-left: 20px;
         padding-right: 20px;
-        height: none;
+        height: auto;
         .profile-box-top {
           left: 10px;
         }
@@ -85,6 +85,9 @@ and (max-device-width : 1000px) {
         }
         .profile-edit-button {
           margin-bottom: 10px;
+        }
+        .email {
+          margin-bottom: 0px;
         }
       }
     }
@@ -103,5 +106,15 @@ and (max-device-width : 1000px) {
         margin-top: 10px;
       }
     }
+  }
+  // profile
+  .profile-container {
+    height: 100%;
+    padding-top: 100px;
+  }
+  // auth
+  .signup-container {
+    align-items: flex-start;
+    padding-top: 100px;
   }
 }
