--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -1,5 +1,4 @@
-@media only screen 
-and (max-device-width : 1000px) {
+@media screen and (max-width : 1000px) {
   // common
   .base-wrapper {
     padding-left: 0px;
