--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -19,8 +19,9 @@
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   span {
-    margin-left: 100px;
-    opacity: 0;
+    // margin-left: 100px;
+    // opacity: 0;
+    font-weight: bold;
   }
 
   h1 {
@@ -48,6 +49,13 @@
 
   h1 {
     font-size: 30px;
+    color: white;
+  }
+
+  p {
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
     color: white;
   }
 
@@ -81,18 +89,11 @@
   h1 {
     font-size: 30px;
     margin-bottom: 25px;
+    font-weight: bold;
   }
-
-  .splash-bottom-body {
-    width: 50%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    p {
-      text-align: center;
-      font-size: 20px;
-      margin: 5px 0px;
-    }
+  p {
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
   }
 }
