--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -28,6 +28,7 @@
     font-size: 40px;
     opacity: 1;
     margin-bottom: 25px;
+    font-weight: bold;
   }
 
   p {
@@ -76,7 +77,7 @@
 }
 
 .splash-bottom {
-  height: 327px;
+  // height: 327px;
   width: 100%;
   padding: 40px 0px;
   display: flex;
@@ -86,6 +87,27 @@
   // background: white;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
+  h1 {
+    font-size: 30px;
+    margin-bottom: 25px;
+    font-weight: bold;
+  }
+  p {
+    text-align: center;
+    font-size: 20px;
+    line-height: 45px;
+  }
+}
+
+.splash-teaser {
+  width: 100%;
+  padding: 40px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: $drk-primary;
+  color: white;
   h1 {
     font-size: 30px;
     margin-bottom: 25px;
