--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -14,7 +14,7 @@
 }
 
 .base-container {
-  min-height: 100vh;
+  min-height: 100%;
   width: 100%;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   display: flex;
@@ -29,7 +29,7 @@
   width: 100%;
   height: 100%;
   min-width: 1360px;
-  min-height: 950px;
+  // min-height: 950px;
   padding-top: 60px;
   display: flex;
   flex-direction: column;
