--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -27,7 +27,7 @@
 .app-container {
   position: relative;
   width: 100%;
-  // height: 100%;
+  height: 100%;
   min-width: 1360px;
   // min-height: 950px;
   padding-top: 60px;
