reset min height on responsive app contianer

--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -1,4 +1,4 @@
-@media screen and (max-device-width : 737px) {
+@media screen and (max-device-width : 769px) {
 
   .base-wrapper {
     padding-left: 0px;
@@ -6,7 +6,7 @@
     background: #E9EBEE;
   }
   .base-container {
-    min-height: initial;
+    // min-height: initial;
     background: #E9EBEE;
   }
   .app-container {
